tests/agl/rejections/type/uninferable_typevar.agl
def empty[T]() -> list[T] = []
let xs = empty()
xs
